--- a/store/blocks/global/components/product/product-breadcrumb.jsonc
+++ b/store/blocks/global/components/product/product-breadcrumb.jsonc
@@ -3,11 +3,17 @@
         "title": "Miga de pan de Producto",
         "children": [
             "flex-layout.col#product__breadcrumb"
-        ]
+        ],
+        "props": {
+            "blockClass": "product__breadcrumb"
+        }
     },
     "flex-layout.col#product__breadcrumb": {
         "children": [
             "breadcrumb"
-        ]
+        ],
+        "props": {
+            "blockClass": "breadcrumb"
+        }
     }
 }
