--- a/store/blocks/global/screen/product.jsonc
+++ b/store/blocks/global/screen/product.jsonc
@@ -2,95 +2,115 @@
   "store.product": {
     "children": [
       "flex-layout.row#product__breadcrumb",
-      "flex-layout.row#product__info",
-      "flex-layout.row#product__tabs"
-    ]
+      "flex-layout.row#product__info"
+      //"flex-layout.row#product__tabs" => se fue a product-info-data
+    ],
+    "props": {
+      "blockClass": "Product__store"
+    }
   },
-
-  "flex-layout.row#product__tabs":{
-    "title":"Información adicional",
-    "children":[
+  "flex-layout.row#product__tabs": {
+    "title": "Información adicional",
+    "children": [
+      "flex-layout.col#product__tabs"
+    ],
+    "props": {
+      "blockClass": "product__tabs-row"
+    }
+  },
+  "flex-layout.col#product__tabs": {
+    "title": "Información adicional",
+    "children": [
       "tab-layout#product__tabs"
-    ]
-    
+    ],
+    "props": {
+      "blockClass": "product__tabs-col"
+    }
   },
-
-  "tab-layout#product__tabs":{
-  "children":[
-    "tab-list#product__tabs--list",
-    "tab-content#product__tabs--content"
-  ]
+  "tab-layout#product__tabs": {
+    "children": [
+      "tab-list#product__tabs--list",
+      "tab-content#product__tabs--content"
+    ],
+    "props": {
+      "blockClass": "product__tabs-layout"
+    }
   },
-
-  "tab-list#product__tabs--list":{
-    "children":[
+  "tab-list#product__tabs--list": {
+    "children": [
       "tab-list.item#tabs__list--reviews-and-ratings",
       "tab-list.item#tabs__list--product-specification",
       "tab-list.item#tabs__list--questions"
-    ]
+    ],
+    "props": {
+      "blockClass": "product__tabs-list"
+    }
   },
-
-  "tab-list.item#tabs__list--reviews-and-ratings":{
-    "props":{
+  "tab-list.item#tabs__list--reviews-and-ratings": {
+    "props": {
       "tabId": "reviews-and-ratings",
-      "label":"Revisiones y calificaciones",
-      "defaultActiveTab":false
+      "label": "Revisiones y calificaciones",
+      "defaultActiveTab": false,
+      "blockClass": "product__tabs-list--reviews-and-ratings"
     }
   },
-  "tab-list.item#tabs__list--product-specification":{
-    "props":{
+  "tab-list.item#tabs__list--product-specification": {
+    "props": {
       "tabId": "product-specification",
-      "label":"Revisiones y calificaciones",
-      "defaultActiveTab":false
+      "label": "Especificaciones del producto",
+      "defaultActiveTab": false,
+      "blockClass": "product__tabs-list--product-specification"
     }
   },
-  "tab-list.item#tabs__list--questions":{
-    "props":{
+  "tab-list.item#tabs__list--questions": {
+    "props": {
       "tabId": "questions",
-      "label":"Preguntas y respuestas",
-      "defaultActiveTab":false
+      "label": "Preguntas y respuestas",
+      "defaultActiveTab": false,
+      "blockClass": "product__tabs-list--questions"
     }
   },
-
-
-  "tab-content#product__tabs--content":{
-    "children":[
+  "tab-content#product__tabs--content": {
+    "children": [
       "tab-content.item#tabs__content--reviews-and-ratings",
       "tab-content.item#tabs__content--product-specification",
       "tab-content.item#tabs__content--questions"
+    ],
+    "props": {
+      "blockClass": "product__tabs-content"
+    }
+  },
+  "tab-content.item#tabs__content--reviews-and-ratings": {
+    "props": {
+      "tabId": "reviews-and-ratings"
+    },
+    "children": [
+      "product-reviews"
     ]
   },
-
-  "tab-content.item#tabs__content--reviews-and-ratings":{
-    "props":{
-      "tabId": "reviews-and-ratings"
-  },
-  "children":[
-    "product-reviews"
-
-  ]},
-
-
-
-  "tab-content.item#tabs__content--product-specification":{
-    "props":{
+  "tab-content.item#tabs__content--product-specification": {
+    "props": {
       "tabId": "product-specification"
+    },
+    "children": [
+      "product-specifications#product"
+    ]
   },
-  "children":[
-    "product-specifications"
-  ]},
-
-  "tab-content.item#tabs__content--questions":{
-    "props":{
+  "product-specifications#product": {
+    "props": {
+      "shoudCollapseOnTabChange": true,
+      "collapsible": "desktopOnly",
+      "visibleSpecifications": "Coasas raras"
+    }
+  },
+  "tab-content.item#tabs__content--questions": {
+    "props": {
       "tabId": "questions"
-  },
-  "children":[
-"product-questions-and-answers"
-  ]}
-
- 
-
-
+    },
+    "children": [
+      "product-questions-and-answers"
+    ]
+  }
   /*
   "flex-layout.row#main": {
     "props": {
