feat: reorganise files and it add some styles

--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -1,144 +1,8 @@
 {
   "store.home": {
     "blocks": [
-      "whatsapp-button",
-      "mega-menu#home_menu",
-      "flex-layout.row#welcome__section",
-      "flex-layout.row#section__one-homeUp",
-      "flex-layout.row#section__two-categories",
-      "flex-layout.row#section__two-categories2",
-      "flex-layout.row#section__three-yourmarket",
-      "flex-layout.row#section__four-bestsellers-content",
-      "flex-layout.row#section__five-wines-content",
-      "flex-layout.row#section__six-yourhome-content",
-      "flex-layout.row#section__seven-monthsproducts-content",
-      "flex-layout.row#section__eigth-container"
-      //"search-result-layout.customQuery#home-search"
-     
-    ],
-    "props": {
-      "blockClass": "home__container"
-    }
-  },
-
-  "whatsapp-button": {
-    "props": {
-      "logos": "assets/img/whatsapp-logo.webp",
-      "phone": "7777777777",
-      "message": "VTEX U RLZ",
-      "blockClass":"whatsapp__button"
-    }
-  },
-
-  "list-context.bullet-group":{
-    "title":"Contexto de lista de Bullets",
-    "children":["slider-layout#bullet-group"],
-    "props":{
-      "bullets":[
-        {
-          "image":"assets/img/queso1.png",
-          "titleBullet": "Queso Importante",
-          "link":{
-                  "url":"/quesito"},
-          "width":80,
-          "heigth":80
-      },
-      {
-        "image":"assets/img/queso2.png",
-        "titleBullet": "Queso principal",
-        "link":{
-          "url":"/quesito22"
-          }, "width":80,
-          "heigth":80
-        },
-        {
-          "image":"assets/img/queso3.png",
-          "titleBullet": "Queso principal",
-          "link":{
-            "url":"/quesito23"
-            }, "width":80,
-            "heigth":80
-          },
-          {
-        "image":"assets/img/queso2.png",
-        "titleBullet": "Queso principal",
-        "link":{
-          "url":"/quesito24"
-          }, "width":80,
-          "heigth":80
-        },
-        {
-          "image":"assets/img/queso2.png",
-          "titleBullet": "Queso principal",
-          "link":{
-            "url":"/quesito25"
-            },
-            "width":80,
-            "heigth":80
-          }, 
-          {
-            "image":"assets/img/queso2.png",
-            "titleBullet": "Queso principal",
-            "link":{
-              "url":"/quesito24"
-              }, "width":80,
-              "heigth":80
-            },
-            {
-              "image":"assets/img/queso2.png",
-              "titleBullet": "Queso principal",
-              "link":{
-                "url":"/quesito25"
-                },
-                "width":80,
-                "heigth":80
-              }
-  ]
-    }
-  },
-  "slider-layout#bullet-group":{
-    "props":{
-      "itemsPerPage":{
-      "desktop":5,
-      "tablet":2,
-      "mobile":3
-      },
-      
-      "infinite": true,
-      "blockClass": "",
-      "autoplay": {
-          "timeout": 3000,
-          "stopOnHover": true
-      },
-      "arrowSize": 25,
-      "centerMode": "disabled",
-      "showNavigationArrows": "always",
-      "fullWidth":false
-    }
-
-  },
-  "mega-menu#home_menu": {
-    "props": {
-      "blockClass": "home__menu",
-      "openOnly": "horizontal"
-    }
-  },
-  "flex-layout.row#welcome__section": {
-    "children": [
-      "image#section__one-welcome"
-    ],
-    "props": {
-      "fullWidth": "true",
-      "marginBottom": 5,
-      "marginTop": 5,
-      "blockClass": "image__welcome-content"
-    }
-  },
-  "image#section__one-welcome": {
-    "props": {
-      "src": "assets/img/header1.jpg",
-      "title": "Banner principal",
-      "blockClass": "image__welcome"
-    }
+      "responsive-layout.desktop",
+      "responsive-layout.mobile"
+    ]
   }
 }
